# Blog-API-

./: .env  Cargo.toml  README.md
migrations/: 20250301072422_blog_table.sql
src/: error.rs  lib.rs  main.rs  state.rs
src/database/: connection.rs  extractor.rs  full_text_search.rs  mod.rs
src/handler/: create.rs  delete.rs  list.rs  mod.rs  read.rs  search.rs  update.rs
src/model/: blog.rs
src/server/: mod.rs  routes.rs
