[package]
name = "blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
