[package]
name = "blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros"] }
axum-valid = { version = "0.23.0", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }


